# DataQualityReport

./: .flake8  .isort.cfg  .pre-commit-config.yaml  Makefile  NOTICE.txt  README.md  mypy.ini  pyproject.toml  pytest.ini  tutorial.ipynb
.github/workflows/: ci.yml
dataqualityreport/: __init__.py  data_utils.py  dataqualityreport.py  tabulate.py  viz.py
tests/unit/: test_dataqualityreport.py
